Upgrade HogWarpLib + Broom Racing & Moderation Plugins

--- a/BroomRacing/BroomRacing.csproj
+++ b/BroomRacing/BroomRacing.csproj
@@ -1,7 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <AssemblyName>Assembly-Plugin</AssemblyName>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
@@ -10,6 +9,15 @@
     <BaseOutputPath>..\bin</BaseOutputPath>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <AssemblyName>Assembly-Plugin</AssemblyName>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <OutputPath>..\bin\Debug\BroomRacing\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <OutputPath>..\bin\Release\BroomRacing\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
