--- a/MinistryOfMagic/MinistryOfMagic.csproj
+++ b/MinistryOfMagic/MinistryOfMagic.csproj
@@ -9,6 +9,16 @@
     <BaseOutputPath>..\bin</BaseOutputPath>
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+    <RootNamespace>MinistryOfMagic</RootNamespace>
+    <AssemblyName>Assembly-Plugin</AssemblyName>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <OutputPath>..\bin\Debug\MinistryOfMagic\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <OutputPath>..\bin\Release\MinistryOfMagic\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,20 +28,18 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="Serilog" Version="2.12.0">
-      <IncludeAssets>all</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0">
-      <IncludeAssets>all</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0">
+    <PackageReference Include="ilmerge" Version="3.0.41" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3">
       <IncludeAssets>all</IncludeAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Generator\HogWarp.Generator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="False" />
+    <ProjectReference Include="..\Lib\HogWarp.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ReferencePathWithRefAssemblies Update="C:\Users\xbl4z3r\.nuget\packages\newtonsoft.json\13.0.3\lib\net6.0\Newtonsoft.Json.dll" />
   </ItemGroup>
 
 </Project>
